--- a/requirements.extra.txt
+++ b/requirements.extra.txt
@@ -1,9 +1,10 @@
 networkx==2.4
 pydot==1.4.1
-streamlit==0.75.0
+streamlit==1.8.1
+click==8
 watchdog==1.0.2
 plotly==4.14.3
 python-mnist
-torch==1.6.0
+torch==1.12.0
 datasets==1.15.1
 embeddings==0.0.8
